# AdventOfCode2021

./: .gitignore
01/: Cargo.toml
01/src/: main.rs
02/: Cargo.toml
02/src/: main.rs  submarine.rs
03/: Cargo.toml
03/src/: main.rs
04/: Cargo.toml
04/src/: Bingo.rs  main.rs
05/: Cargo.toml
05/src/: main.rs  world.rs
06/: Cargo.toml
06/src/: main.rs
07/: Cargo.toml
07/src/: main.rs
08/: Cargo.toml
08/src/: main.rs  seven.rs
09/: Cargo.toml
09/src/: heatmap.rs  main.rs
10/: Cargo.toml
10/src/: main.rs  syncheck.rs
11/: Cargo.toml
11/src/: args.rs  bin.rs  energymap.rs  errors.rs  lib.rs
11/tests/: part1.rs  part2.rs
