[package]
name = "AoC-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
clap = { version = "3.0.0-rc.3", features = [ "derive" ]}
lazy_static = "1.4.0"
regex = "1.5.4"
itertools = "0.10.3"
euclid = "0.22.6"

