[package]
name = "AoC_11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "AoC_11"
path = "src/lib.rs"

[[bin]]
name = "AoC_11"
path = "src/bin.rs"

[dependencies]
clap = {version="4.2.7", features = [ "derive" ]}
itertools = "0.10.5"
ndarray = "0.15.6"
